--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+  provider: ^6.0.5
   intl: ^0.17.0
   hive: ^2.0.4
   hive_flutter: ^1.1.0
