--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.4
   provider: ^6.0.5
-  intl: ^0.17.0
+  intl: ^0.20.0
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.3
@@ -50,6 +50,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  awesome_notifications: ^0.10.0
 
 dev_dependencies:
   build_runner: ^2.1.2
